src/main/java/com/parsingfiles/ImagescriptParser.java
// Generated from Imagescript.g4 by ANTLR 4.13.1

    package com.parsingfiles;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ImagescriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, IDENTIFIER=17, 
		NUMBER=18, STRING=19, WS=20, COMMENT=21;
	public static final int
		RULE_script = 0, RULE_statement = 1, RULE_loadStatement = 2, RULE_resizeStatement = 3, 
		RULE_grayscaleStatement = 4, RULE_rotateStatement = 5, RULE_flipStatement = 6, 
		RULE_flipDirection = 7, RULE_saveStatement = 8;
	private static String[] makeRuleNames() {
		return new String[] {
			"script", "statement", "loadStatement", "resizeStatement", "grayscaleStatement", 
			"rotateStatement", "flipStatement", "flipDirection", "saveStatement"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'LOAD'", "'AS'", "';'", "'RESIZE'", "'WIDTH'", "'HEIGHT'", "'GRAYSCALE'", 
			"'ROTATE'", "'ANGLE'", "'FLIP'", "'HORIZONTAL'", "'VERTICAL'", "'BOTH'", 
			"'SAVE'", "'TO'", "'FORMAT'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "IDENTIFIER", "NUMBER", "STRING", "WS", 
			"COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Imagescript.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ImagescriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ScriptContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ImagescriptParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImagescriptListener ) ((ImagescriptListener)listener).enterScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImagescriptListener ) ((ImagescriptListener)listener).exitScript(this);
		}
	}

	public final ScriptContext script() throws RecognitionException {
		ScriptContext _localctx = new ScriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_script);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(21);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 17810L) != 0)) {
				{
				{
				setState(18);
				statement();
				}
				}
				setState(23);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(24);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public LoadStatementContext loadStatement() {
			return getRuleContext(LoadStatementContext.class,0);
		}
		public ResizeStatementContext resizeStatement() {
			return getRuleContext(ResizeStatementContext.class,0);
		}
		public GrayscaleStatementContext grayscaleStatement() {
			return getRuleContext(GrayscaleStatementContext.class,0);
		}
		public RotateStatementContext rotateStatement() {
			return getRuleContext(RotateStatementContext.class,0);
		}
		public FlipStatementContext flipStatement() {
			return getRuleContext(FlipStatementContext.class,0);
		}
		public SaveStatementContext saveStatement() {
			return getRuleContext(SaveStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImagescriptListener ) ((ImagescriptListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImagescriptListener ) ((ImagescriptListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(32);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(26);
				loadStatement();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(27);
				resizeStatement();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 3);
				{
				setState(28);
				grayscaleStatement();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 4);
				{
				setState(29);
				rotateStatement();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 5);
				{
				setState(30);
				flipStatement();
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 6);
				{
				setState(31);
				saveStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LoadStatementContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(ImagescriptParser.STRING, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ImagescriptParser.IDENTIFIER, 0); }
		public LoadStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loadStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImagescriptListener ) ((ImagescriptListener)listener).enterLoadStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImagescriptListener ) ((ImagescriptListener)listener).exitLoadStatement(this);
		}
	}

	public final LoadStatementContext loadStatement() throws RecognitionException {
		LoadStatementContext _localctx = new LoadStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_loadStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			match(T__0);
			setState(35);
			match(STRING);
			setState(36);
			match(T__1);
			setState(37);
			match(IDENTIFIER);
			setState(38);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ResizeStatementContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(ImagescriptParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ImagescriptParser.IDENTIFIER, i);
		}
		public List<TerminalNode> NUMBER() { return getTokens(ImagescriptParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(ImagescriptParser.NUMBER, i);
		}
		public ResizeStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_resizeStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImagescriptListener ) ((ImagescriptListener)listener).enterResizeStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImagescriptListener ) ((ImagescriptListener)listener).exitResizeStatement(this);
		}
	}

	public final ResizeStatementContext resizeStatement() throws RecognitionException {
		ResizeStatementContext _localctx = new ResizeStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_resizeStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			match(T__3);
			setState(41);
			match(IDENTIFIER);
			setState(42);
			match(T__4);
			setState(43);
			match(NUMBER);
			setState(44);
			match(T__5);
			setState(45);
			match(NUMBER);
			setState(46);
			match(T__1);
			setState(47);
			match(IDENTIFIER);
			setState(48);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GrayscaleStatementContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(ImagescriptParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ImagescriptParser.IDENTIFIER, i);
		}
		public GrayscaleStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grayscaleStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImagescriptListener ) ((ImagescriptListener)listener).enterGrayscaleStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImagescriptListener ) ((ImagescriptListener)listener).exitGrayscaleStatement(this);
		}
	}

	public final GrayscaleStatementContext grayscaleStatement() throws RecognitionException {
		GrayscaleStatementContext _localctx = new GrayscaleStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_grayscaleStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(T__6);
			setState(51);
			match(IDENTIFIER);
			setState(52);
			match(T__1);
			setState(53);
			match(IDENTIFIER);
			setState(54);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RotateStatementContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(ImagescriptParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ImagescriptParser.IDENTIFIER, i);
		}
		public TerminalNode NUMBER() { return getToken(ImagescriptParser.NUMBER, 0); }
		public RotateStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rotateStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImagescriptListener ) ((ImagescriptListener)listener).enterRotateStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImagescriptListener ) ((ImagescriptListener)listener).exitRotateStatement(this);
		}
	}

	public final RotateStatementContext rotateStatement() throws RecognitionException {
		RotateStatementContext _localctx = new RotateStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_rotateStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(T__7);
			setState(57);
			match(IDENTIFIER);
			setState(58);
			match(T__8);
			setState(59);
			match(NUMBER);
			setState(60);
			match(T__1);
			setState(61);
			match(IDENTIFIER);
			setState(62);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FlipStatementContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(ImagescriptParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ImagescriptParser.IDENTIFIER, i);
		}
		public FlipDirectionContext flipDirection() {
			return getRuleContext(FlipDirectionContext.class,0);
		}
		public FlipStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_flipStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImagescriptListener ) ((ImagescriptListener)listener).enterFlipStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImagescriptListener ) ((ImagescriptListener)listener).exitFlipStatement(this);
		}
	}

	public final FlipStatementContext flipStatement() throws RecognitionException {
		FlipStatementContext _localctx = new FlipStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_flipStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(T__9);
			setState(65);
			match(IDENTIFIER);
			setState(66);
			flipDirection();
			setState(67);
			match(T__1);
			setState(68);
			match(IDENTIFIER);
			setState(69);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FlipDirectionContext extends ParserRuleContext {
		public FlipDirectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_flipDirection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImagescriptListener ) ((ImagescriptListener)listener).enterFlipDirection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImagescriptListener ) ((ImagescriptListener)listener).exitFlipDirection(this);
		}
	}

	public final FlipDirectionContext flipDirection() throws RecognitionException {
		FlipDirectionContext _localctx = new FlipDirectionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_flipDirection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 14336L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SaveStatementContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ImagescriptParser.IDENTIFIER, 0); }
		public List<TerminalNode> STRING() { return getTokens(ImagescriptParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(ImagescriptParser.STRING, i);
		}
		public SaveStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_saveStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImagescriptListener ) ((ImagescriptListener)listener).enterSaveStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImagescriptListener ) ((ImagescriptListener)listener).exitSaveStatement(this);
		}
	}

	public final SaveStatementContext saveStatement() throws RecognitionException {
		SaveStatementContext _localctx = new SaveStatementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_saveStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(T__13);
			setState(74);
			match(IDENTIFIER);
			setState(75);
			match(T__14);
			setState(76);
			match(STRING);
			setState(77);
			match(T__15);
			setState(78);
			match(STRING);
			setState(79);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}